--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon">
+    <!-- <a href='https://dryicons.com/free-icons/pricing-table'> Icon by Dryicons </a> -->
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabela de Preços</title>
